--- a/Movie Recommendation System.ipynb
+++ b/Movie Recommendation System.ipynb
@@ -2299,7 +2299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
